# SAIL-Project---EdgeHarness

./: .gitignore  PROJECT_PLAN_v2_local-orchestration.md  README.md  implement.md  requirements.txt
sail-platform/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  STARTUP.md  cli.py  pyproject.toml
sail-platform/.sail/: STATE.md  VISION.md  settings.yaml
sail-platform/.sail/agents/: orchestrator.md  planner.md  researcher.md  verifier.md  worker.md
sail-platform/.sail/rules/: escalation.md  memory-isolation.md
sail-platform/config/: mcp_servers.json  models.dev.yaml  models.openrouter.yaml  models.yaml  routing.yaml
sail-platform/eval/: __init__.py  interface.py  scoreboard.py
sail-platform/eval/domains/: README.md
sail-platform/examples/: smoke_coding.yaml  smoke_knowledge.yaml  smoke_research.yaml
sail-platform/examples/accounting/: acct_01.yaml  acct_02.yaml  acct_03.yaml  acct_04.yaml  acct_05.yaml  acct_06.yaml  acct_07.yaml
sail-platform/examples/fixtures/: smoke_coding.py  smoke_coding_test.py
sail-platform/harness/: __init__.py  context.py  loop.py
sail-platform/harness/edit_formats/: __init__.py  base.py  patch.py  str_replace.py  whole_file.py
sail-platform/harness/tools/: __init__.py  registry.py  sandbox.py
sail-platform/memory/: __init__.py  embedder.py  isolation.py  scratchpad.py  turbovec_store.py
sail-platform/orchestrator/: __init__.py  escalation.py  roles.py  router.py  workflow.py
sail-platform/providers/: __init__.py  litellm_pool.py
sail-platform/telemetry/: __init__.py  recorder.py  report.py
(+39 files in other folders)
