[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sail-platform"
version = "0.1.0"
description = "Local AI orchestrator + harness loop with turbovec memory. Unified platform: knowledge-work + coding-agent faces on one engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SAIL" }]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.0",
    "litellm>=1.40",
    "json-repair>=0.25",
    "fastembed>=0.2.5",
    "numpy>=1.24",
    "filelock>=3.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
turbovec = ["turbovec>=0.1"]
gpu = ["vllm>=0.6"]
edge = ["ollama>=0.2"]
eval = ["pytest>=8.0", "pandas>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
sail = "cli:main"

[tool.setuptools]
packages = ["orchestrator", "harness", "harness.tools", "harness.edit_formats", "memory", "providers", "telemetry", "eval"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["examples", "tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--import-mode=importlib"
